--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="ROYAL CAKE savour full brown.png" style="width:150px">
+        <img src="images/ROYAL CAKE savour full brown.png" style="width:150px">
     </header>
     <nav>
         <a href="#home">Home</a>
