--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake Shop</title>
+    <link rel="icon" type="image/x-icon" href="images/ROYAL CAKE savour full brown.png">
     <link href="css/style.css" rel="stylesheet">
     
 </head>
