--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -19,7 +19,6 @@
         <div class="tab">
             <button class="tablinks" onclick="openCake(event, 'home')">Home</button>
             <button class="tablinks" onclick="openCake(event, 'catalog')">Catalog</button>
-            <button class="tablinks" onclick="openCake(event, 'order')">Order</button>
             <button class="tablinks" onclick="openCake(event, 'q&a')">Q&A</button>
             <button class="tablinks" onclick="openCake(event, 'contact')">Order</button>
         </div>
@@ -30,7 +29,7 @@
                 <!--There were more in here-->
                 <table style="padding-left:250px">
                     <tr>
-                        <th style="color:black; background-color: #ebebeb; padding: 10px; margin:auto;">FEATURED / NEW PRODUCT</th>
+                        <th style="color:black; background-color: #ebebeb; padding: 10px; margin:auto;">FEATURED</th>
                     </tr>
                 </table><br>
                 <table style="padding-left:35px">
@@ -59,10 +58,10 @@
                 </table><br>
                 <table style="padding-left:35px">
                     <tr>
-                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/cake.jpg" style="width:150px"></td>
-                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/cake.jpg" style="width:150px"></td>
-                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/cake.jpg" style="width:150px"></td>
-                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/cake.jpg" style="width:150px"></td>
+                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-white.png" style="width:150px"></td>
+                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/chocolate-coin.png" style="width:150px"></td>
+                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-white.png" style="width:150px"></td>
+                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-top-roll.png" style="width:150px"></td>
                     </tr>
                     <tr>
                         <td style="color:black; text-align:center; margin:auto;">Placeholder</td>
