--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -60,13 +60,13 @@
                     <tr>
                         <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-white.png" style="width:150px"></td>
                         <td style="color:black; padding: 10px; margin:auto;"><img src="images/chocolate-coin.png" style="width:150px"></td>
-                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-white.png" style="width:150px"></td>
+                        <td style="color:black; padding: 10px; margin:auto;"><img src="images/disney.png" style="width:150px"></td>
                         <td style="color:black; padding: 10px; margin:auto;"><img src="images/blue-top-roll.png" style="width:150px"></td>
                     </tr>
                     <tr>
-                        <td style="color:black; text-align:center; margin:auto;">Placeholder</td>
-                        <td style="color:black; text-align:center; margin:auto;">Placeholder</td>
-                        <td style="color:black; text-align:center; margin:auto;">Placeholder</td>
+                        <td style="color:black; text-align:center; margin:auto;">Butter Cream (D12)</td>
+                        <td style="color:black; text-align:center; margin:auto;">Butter Cream (D15)</td>
+                        <td style="color:black; text-align:center; margin:auto;">Butter Cream + Topper</td>
                         <td style="color:black; text-align:center; margin:auto;">Placeholder</td>
                     </tr>
                 </table>
