--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -47,7 +47,7 @@
                     </tr>
                 </table>
                 <p style="text-align: center;">
-                    <button style="width: 15%; height:15%; padding:5px; background-color: #ebebeb; outline: none;">View All</button>
+                    <button class="viewall">View All</button>
                 </p>
     
                 <!--Best Seller Part-->
@@ -71,7 +71,7 @@
                     </tr>
                 </table>
                 <p style="text-align: center;">
-                    <button style="width: 15%; height:15%; padding:5px; background-color: #ebebeb; outline: none;">View All</button>
+                    <button class="viewall">View All</button>
                 </p>
             </section>
           </div>
