--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -55,7 +55,61 @@
         </div>
         <div id="catalog" class="tabcontent">
             <!--Isi tab catalog-->
-          </div>
+
+            <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> -->
+            <div class="wrapper">
+                <h1>Frequently Asked Questions</h1>
+
+                <div class="faq">
+                    <button>
+                    Apakah setiap pembelian kue sudah free lilin?
+                    <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                <div class="panel">
+                    <p>
+                    Ya, setiap pembelian kue sudah free lilin standar (lilin spiral) dan sebuah pisau plastik. <br>
+                    </p>
+                </div>
+                </div>
+
+                <div class="faq">
+                    <button>
+                    Apakah bisa request penulisan saat membeli kue?
+                    <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                    <div class="panel">
+                    <p>
+                    Setiap pembelian kue, kami menerima request penulisan ucapan dipapan cokelat. <br>
+                    </p>
+                </div>
+                </div>
+
+                <div class="faq active">
+                    <button>
+                     Apakah Royal Cake Savour memiliki layanan delivery?
+                    <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                    <div class="panel">
+                    <p>
+                    Kami memiliki layanan delivery melalui via kurir mobil. <br>
+                    </p>
+                </div>
+                </div>
+
+                <div class="faq">
+                    <button>
+                    Kapan waktu maksimal pemesanan kue?
+                    <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                    <div class="panel">
+                    <p>
+                    Pemesanan kue dilakukan maksimal H-1 atau 24 jam sebelum kue diambil. <br>
+                    </p>
+                </div>
+                </div>
+            </div>
+            
+        </div>
 
         <footer>
             <ul>
