--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -19,7 +19,7 @@
         <div class="tab">
             <button class="tablinks" onclick="openCake(event, 'home')">Home</button>
             <button class="tablinks" onclick="openCake(event, 'catalog')">Catalog</button>
-            <button class="tablinks" onclick="openCake(event, 'q&a')">Q&A</button>
+            <button class="tablinks" onclick="openCake(event, 'q&a')">FAQ</button>
             <button class="tablinks" onclick="openCake(event, 'contact')">Order</button>
         </div>
     </nav>
