--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -116,8 +116,8 @@
 
         <footer>
             <ul>
-                <li>0896-1228-1227</li>
-                <li>@royalcakesavour</li>
+                <li>WA : 0896-1228-1227</li>
+                <li>IG : @royalcakesavour</li>
                 <li>Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</li>
             </ul>            
         </footer>
