--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -116,9 +116,9 @@
 
         <footer>
             <ul>
-                <li>WA : 0896-1228-1227</li>
-                <li>IG : @royalcakesavour</li>
-                <li>Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</li>
+                <li><img src="images/wa.png" style="height:15px; width:15px"> 0896-1228-1227</li>
+                <li><img src="images/ig.png" style="height:15px; width:15px"> @royalcakesavour</li>
+                <li><img src="images/loc.png" style="height:15px; width:15px"> Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</li>
             </ul>            
         </footer>
 
