--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div class="faq active">
+                <div class="faq">
                     <button>
                      Apakah Royal Cake Savour memiliki layanan delivery?
                     <i class="fa-solid fa-chevron-down"></i>
