--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -59,7 +59,7 @@
                 <h1>Frequently Asked Questions</h1>
 
                 <div class="faq">
-                    <button>
+                    <button class="dropdown-buttons">
                     Apakah setiap pembelian kue sudah free lilin?
                     <i class="fa-solid fa-chevron-down"></i>
                     </button>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="faq">
-                    <button>
+                    <button class="dropdown-buttons">
                     Apakah bisa request penulisan saat membeli kue?
                     <i class="fa-solid fa-chevron-down"></i>
                     </button>
@@ -82,8 +82,8 @@
                     </div>
                 </div>
 
-                <div class="faq">
-                    <button>
+                <div class="faq active">
+                    <button class="dropdown-buttons">
                      Apakah Royal Cake Savour memiliki layanan delivery?
                     <i class="fa-solid fa-chevron-down"></i>
                     </button>
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="faq">
-                    <button>
+                    <button class="dropdown-buttons">
                     Kapan waktu maksimal pemesanan kue?
                     <i class="fa-solid fa-chevron-down"></i>
                     </button>
