--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -30,31 +30,18 @@
                 <h2 style="text-align: center; background-color: #ebebeb; padding: 10px;">Featured</h2>
                 <br>
 
-                <button><img src="images/white-bento.png" style="width:200px"><p>Placeholder</p></button>
-                <button><img src="images/skin-chocolate.png" style="width:200px"><p>Placeholder</p></button>
-                <button><img src="images/blue-black-things.png" style="width: 200px;"><p>Placeholder</p></button>
-                <button><img src="images/blue-white.png" style="width: 200px;"><p>Placeholder</p></button>
+                <button><img src="images/white-bento.png" style="width:200px"><p>Bento Cake</p></button>
+                <button><img src="images/skin-chocolate.png" style="width:200px"><p>D12 Butter Cream</p></button>
+                <button><img src="images/blue-black-things.png" style="width: 200px;"><p>D15 Butter Cream</p></button>
+                <button><img src="images/blue-white.png" style="width: 200px;"><p>Mini Korean</p></button>
                 
                 <div id="featured-more" style="display: none;">
-                    <button><img src="images/white-bento.png" style="width:200px"><p>Placeholder</p></button>
-                    <button><img src="images/skin-chocolate.png" style="width:200px"><p>Placeholder</p></button>
-                    <button><img src="images/blue-black-things.png" style="width: 200px;"><p>Placeholder</p></button>
-                    <button><img src="images/bdaycat-minikorean.png" style="width: 200px;"><p>Placeholder</p></button>
+                    <button><img src="images/yellow-popcorn-d12.png" style="width:200px"><p>D18 Butter Cream</p></button>
+                    <button><img src="images/tango-oreo-d15.png" style="width:200px"><p>D20 Butter Cream</p></button>
                 </div>
 
                 <p style="text-align: center;">
                     <button class="viewall" onclick="showMore('featured')">View All</button>
-                </p>
-                
-                <div id="best-seller-more" style="display: none;">
-                    <button><img src="images/blue-white.png" style="width: 200px;"><p>Butter Cream (D12)</p></button>
-                    <button><img src="images/chocolate-coin.png" style="width: 200px;"><p>Butter Cream (D15)</p></button>
-                    <button><img src="images/disney.png" style="width: 200px;"><p>Butter Cream + Topper</p></button>
-                    <button><img src="images/blue-top-roll.png" style="width: 200px;"><p>Placeholder</p></button>
-                </div>
-
-                <p style="text-align: center;">
-                    <button class="viewall" onclick="showMore('best-seller')">View All</button>
                 </p>
             </section>
           </div>
