--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -49,6 +49,34 @@
         <div id="catalog" class="tabcontent">
             <!--Isi tab catalog-->
         </div>
+
+     <div id="item-details" class="tabcontent">
+            <div class="container flex">
+                <div class="left">
+                <img src="images/d15/onepiece-d15.png" alt="One Piece Themed Birthday Cake"/>
+                </div>
+                <div class="right">
+                <h1>Black Forest</h1>
+                <h2>Rp xxxx</h2>
+                <h4>Chocolate cake dengan perpaduan selai strawberry dan krim bertemakan One Piece dengan topper, fondant nama, dan lilin emas.</h4>
+                <div class="order">
+                <span>PEMESANAN</span>
+                <button>insta</button>
+                <button>wa</button>
+                </div>
+                </div>
+                </div>
+            </div>
+
+    <div class="variation-details">
+        <h2>Variation Details</h2>
+        <div class="variation-img">
+        <img src="images/add-on/one-piece-topper.jpg"/>
+        <img src="images/add-on/fondant-letters.jpg"/>
+        <img src="images/add-on/gold-candles.jpg"/>
+        </div>
+    </div>
+        </div>
     
     <div id="q&a" class="tabcontent">
         <div class="container">
