--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -53,7 +53,7 @@
      <div id="item-details" class="tabcontent">
             <div class="container flex">
                 <div class="left">
-                <img src="images/d15/onepiece-d15.png" alt="One Piece Themed Birthday Cake"/>
+                <img src="images/one-pcs.png" alt="One Piece Themed Birthday Cake"/>
                 </div>
                 <div class="right">
                 <h1>Black Forest</h1>
@@ -71,9 +71,9 @@
     <div class="variation-details">
         <h2>Variation Details</h2>
         <div class="variation-img">
-        <img src="images/add-on/one-piece-topper.jpg"/>
-        <img src="images/add-on/fondant-letters.jpg"/>
-        <img src="images/add-on/gold-candles.jpg"/>
+        <img src="images/one-piece-topper.jpg"/>
+        <img src="images/fondant-letters.jpg"/>
+        <img src="images/gold-candles.jpg"/>
         </div>
     </div>
         </div>
