--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -51,30 +51,74 @@
         </div>
 
      <div id="item-details" class="tabcontent">
-            <div class="container flex">
-                <div class="left">
-                <img src="images/one-pcs.png" alt="One Piece Themed Birthday Cake"/>
+    <div class="d12-page">    
+    <div class="container flex">
+        <div class="left">
+            <img src="images/goldleaf-flower-d12.png" alt="Diameter 12cm Birthday Cake"/>
+        </div>
+        <div class="right">
+            <h1>D12cm</h1>
+                <div class="price-list">
+                <h2>Price List:</h2>
+                <h3>Ready Cake:</h3>
+                    <ul>
+                        <li>Rp75.000,-</li>
+                    </ul>
+                <h3>Custom Cake:</h3>
+                    <ul>
+                        <li>Custom full buttercream: Rp150.000,-</li>
+                        <li>Custom balutan full buttercream + topper karakter kertas: Rp170.000,-</li>
+                        <li>Custom balutan kue buttercream, hiasan fondant/bunga/boneka karakter khusus: Rp200.000,-</li>
+                        <li>Custom hiasan full fondant: mulai dari Rp250.000,-</li>
+                    </ul>
                 </div>
-                <div class="right">
-                <h1>Black Forest</h1>
-                <h2>Rp xxxx</h2>
-                <h4>Chocolate cake dengan perpaduan selai strawberry dan krim bertemakan One Piece dengan topper, fondant nama, dan lilin emas.</h4>
-                <div class="order">
+                <div class="variant-list">
+                <h2>Variant List:</h2>
+                    <ul>
+                        <li>Choco Delight Chocolate cake dengan perpaduan coklat ganache dan krim coklat di setiap lapisannya.</li>
+                        <li>Double Choco Chocolate cake yang berbalut coklat dengan isian krim coklat.</li>
+                        <li>Choconut Chocolate cake dengan isian coklat ganache dan taburan kacang.</li>
+                        <li>Chocoberry Chocolate cake dengan perpaduan selai strawberry dan coklat ganache.</li>
+                        <li>Blackforest Chocolate cake dengan perpaduan selai strawberry dan krim.</li>
+                        <li>Red Velvet Kue bolu berlapis creamcheese.</p>
+                    </ul>
+                </div>
+            <div class="order">
                 <span>PEMESANAN</span>
                 <button>insta</button>
                 <button>wa</button>
-                </div>
-                </div>
-                </div>
             </div>
+        </div>
+    </div>
 
     <div class="variation-details">
         <h2>Variation Details</h2>
         <div class="variation-img">
-        <img src="images/one-piece-topper.jpg"/>
-        <img src="images/fondant-letters.jpg"/>
-        <img src="images/gold-candles.jpg"/>
+        <img src="images/blue-piebis-d12.png"/>
+        <img src="images/blue-black-things.png"/>
+        <img src="images/blue-white.png"/>
+        <img src="images/brown-coin-chocoball-d12.png"/>
+        <img src="images/ceres-cover-d12.png"/>
+        <img src="images/chocolate-nut-d12.png"/>
+        <img src="images/duck-d12.png"/>
+        <img src="images/flower-petals-d12.png"/>
+        <img src="images/velvet-whitechoco-d12.png"/>
+        <img src="images/green-cherry-d12.png"/>
+        <img src="images/guitar-d12.png"/>
+        <img src="images/orange-springkle-d12.png"/>
+        <img src="images/pink-crown-d12.png"/>
+        <img src="images/pink-piebis-d12.png"/>
+        <img src="images/pink-topper-d12.png"/>
+        <img src="images/purple-flower-d12.png"/>
+        <img src="images/red-goldspringkle-d12.png"/>
+        <img src="images/red-hearttopper-d12.png"/>
+        <img src="images/tango-d12.png"/>
+        <img src="images/xmas-d12.png"/>
+        <img src="images/yellow-popcorn-d12.png"/>
+        <img src="images/yellow-tango-d12.png"/>
+        <img src="images/yellow-white-popcorn-d12.png"/>
         </div>
+    </div>
     </div>
         </div>
     
