--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -31,7 +31,7 @@
                 <br>
 
                 <button><img src="images/white-bento.png" style="width:200px"><p>Bento Cake</p></button>
-                <button><img src="images/blue-black-things.png" style="width:200px"><p>D12 Butter Cream</p></button>
+                <button class="content" onclick="openCake(event,'item-details')"><img src="images/blue-black-things.png" style="width:200px"><p>D12 Butter Cream</p></button>
                 <button><img src="images/skin-chocolate.png" style="width: 200px;"><p>D15 Butter Cream</p></button>
                 <button><img src="images/blue-white.png" style="width: 200px;"><p>Mini Korean</p></button>
                 
