--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -92,11 +92,9 @@
     </div>
 
     <div class="variation-details">
-        <h2>Variation Details</h2>
+        <h2>Contoh Kue</h2>
         <div class="variation-img">
         <img src="images/blue-piebis-d12.png"/>
-        <img src="images/blue-black-things.png"/>
-        <img src="images/blue-white.png"/>
         <img src="images/brown-coin-chocoball-d12.png"/>
         <img src="images/ceres-cover-d12.png"/>
         <img src="images/chocolate-nut-d12.png"/>
