--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -353,7 +353,7 @@
     <!--Footer-->
       
     <footer>
-            <ul>
+            <ul style="padding-top:10px">
                 <li><img src="images/wa.png" style="height:15px; width:15px"> 0896-1228-1227</li>
                 <li><img src="images/ig.png" style="height:15px; width:15px"> @royalcakesavour</li>
                 <li><img src="images/loc.png" style="height:17px; width:17px"> Jl. Wonobaru, Warkop Super Horizon (samping Indomaret)</li>
