--- a/Royal-Cake.html
+++ b/Royal-Cake.html
@@ -343,7 +343,7 @@
         <div class="container">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
             <div class="wrapper">
-                <h1>Frequently Asked Questions</h1>
+                <h1 style="text-align:center;">Frequently Asked Questions</h1>
 
                 <div class="faq">
                     <button class="dropdown-buttons">
